[gd_scene load_steps=2 format=3 uid="uid://b0h147ybrxij8"]

[ext_resource type="Script" path="res://dive_pp.gd" id="1_vi5rk"]

[node name="Dive-PP" type="Node2D"]
script = ExtResource("1_vi5rk")

[node name="Play" type="Button" parent="."]
offset_left = 100.0
offset_top = 100.0
offset_right = 150.0
offset_bottom = 131.0
text = "Play"

[node name="Stop" type="Button" parent="."]
offset_left = 300.0
offset_top = 100.0
offset_right = 350.0
offset_bottom = 131.0
text = "Stop
"

[node name="Ventilatory" type="LineEdit" parent="."]
offset_left = 729.0
offset_top = 10.0
offset_right = 859.0
offset_bottom = 41.0
placeholder_text = "Value of VÃá"
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 100.0
offset_top = 2.0
offset_right = 640.0
offset_bottom = 52.0

[node name="MeanExpiratoryReserveVolume" type="LineEdit" parent="."]
offset_left = 729.0
offset_top = 65.0
offset_right = 859.0
offset_bottom = 96.0
placeholder_text = "Value of Vùë®ùíò"
alignment = 1

[node name="MeanFunctionalResidualVolume" type="LineEdit" parent="."]
offset_left = 729.0
offset_top = 120.0
offset_right = 859.0
offset_bottom = 151.0
placeholder_text = "Value of Vùë®ùíçùíà"
alignment = 1

[node name="AlveolarBloodVolume" type="LineEdit" parent="."]
offset_left = 729.0
offset_top = 175.0
offset_right = 859.0
offset_bottom = 206.0
placeholder_text = "Value of Vùë®ùíçùíÉ"
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CardiacOutput" type="LineEdit" parent="."]
offset_left = 729.0
offset_top = 230.0
offset_right = 859.0
offset_bottom = 261.0
placeholder_text = "Value of QÃá"
alignment = 1

[node name="ArterialBloodVolume" type="LineEdit" parent="."]
offset_left = 729.0
offset_top = 285.0
offset_right = 859.0
offset_bottom = 316.0
placeholder_text = "Value of Vùë®"
alignment = 1

[node name="CapillaryBloodVolume" type="LineEdit" parent="."]
offset_left = 729.0
offset_top = 340.0
offset_right = 859.0
offset_bottom = 371.0
placeholder_text = "Value of VùíÑ"
alignment = 1

[node name="VenousBloodVolume" type="LineEdit" parent="."]
offset_left = 729.0
offset_top = 395.0
offset_right = 859.0
offset_bottom = 426.0
placeholder_text = "Value of Vùíó"
alignment = 1

[node name="TissueVolume" type="LineEdit" parent="."]
offset_left = 729.0
offset_top = 450.0
offset_right = 859.0
offset_bottom = 481.0
placeholder_text = "Value of Vùíïùíä"
alignment = 1

[node name="Metabolism" type="LineEdit" parent="."]
offset_left = 729.0
offset_top = 505.0
offset_right = 859.0
offset_bottom = 536.0
placeholder_text = "Value of ·πÄO‚ÇÇ"
alignment = 1

[node name="Default Value 1" type="RichTextLabel" parent="."]
offset_left = 879.0
offset_top = 10.0
offset_right = 1079.0
offset_bottom = 41.0
text = "Default : 8.1 L.min-1"

[node name="Default Value 2" type="RichTextLabel" parent="."]
offset_left = 879.0
offset_top = 230.0
offset_right = 1079.0
offset_bottom = 261.0
text = "Default : 4.2 L.min-1"

[node name="Default Value 3" type="RichTextLabel" parent="."]
offset_left = 879.0
offset_top = 120.0
offset_right = 1079.0
offset_bottom = 151.0
text = "Default : 1.0 L"

[node name="Default Value 4" type="RichTextLabel" parent="."]
offset_left = 879.0
offset_top = 175.0
offset_right = 1079.0
offset_bottom = 206.0
text = "Default : 0.5 L"

[node name="Default Value 5" type="RichTextLabel" parent="."]
offset_left = 879.0
offset_top = 65.0
offset_right = 1079.0
offset_bottom = 96.0
text = "Default : 1.5 L"

[node name="Default Value 6" type="RichTextLabel" parent="."]
offset_left = 879.0
offset_top = 285.0
offset_right = 1079.0
offset_bottom = 316.0
text = "Default : 1.7 L"

[node name="Default Value 7" type="RichTextLabel" parent="."]
offset_left = 879.0
offset_top = 340.0
offset_right = 1079.0
offset_bottom = 371.0
text = "Default : 0.5 L"

[node name="Default Value 8" type="RichTextLabel" parent="."]
offset_left = 879.0
offset_top = 395.0
offset_right = 1079.0
offset_bottom = 426.0
text = "Default : 3 L"

[node name="Default Value 9" type="RichTextLabel" parent="."]
offset_left = 879.0
offset_top = 450.0
offset_right = 1079.0
offset_bottom = 481.0
text = "Default : 70 L"

[node name="Default Value 10" type="RichTextLabel" parent="."]
offset_left = 879.0
offset_top = 505.0
offset_right = 1179.0
offset_bottom = 536.0
text = "Default : 8.33 mmol"

[node name="PressionAtmospherique" type="LineEdit" parent="."]
offset_left = 729.0
offset_top = 560.0
offset_right = 859.0
offset_bottom = 591.0
placeholder_text = "Value of Pùòºùô©ùô¢"
alignment = 1

[node name="Metabolism3" type="LineEdit" parent="."]
offset_left = 729.0
offset_top = 615.0
offset_right = 859.0
offset_bottom = 646.0
placeholder_text = "Value of fO‚ÇÇ"
alignment = 1

[node name="Default Value 11" type="RichTextLabel" parent="."]
offset_left = 879.0
offset_top = 615.0
offset_right = 1179.0
offset_bottom = 646.0
text = "Default : 0.21 Percent"

[node name="Default Value 12" type="RichTextLabel" parent="."]
offset_left = 879.0
offset_top = 560.0
offset_right = 1179.0
offset_bottom = 591.0
text = "Default : 101325 Pa"

[connection signal="button_down" from="Play" to="." method="_on_play_button_down"]
[connection signal="button_down" from="Stop" to="." method="_on_stop_button_down"]
[connection signal="text_changed" from="Ventilatory" to="." method="_on_text_vent"]
[connection signal="text_changed" from="MeanExpiratoryReserveVolume" to="." method="_on_text_vaw"]
[connection signal="text_changed" from="MeanFunctionalResidualVolume" to="." method="_on_text_valg"]
[connection signal="text_changed" from="AlveolarBloodVolume" to="." method="_on_text_valb"]
[connection signal="text_changed" from="CardiacOutput" to="." method="_on_text_cardiac"]
[connection signal="text_changed" from="ArterialBloodVolume" to="." method="_on_text_va"]
[connection signal="text_changed" from="CapillaryBloodVolume" to="." method="_on_text_vc"]
[connection signal="text_changed" from="VenousBloodVolume" to="." method="_on_text_vv"]
[connection signal="text_changed" from="TissueVolume" to="." method="_on_text_vti"]
[connection signal="text_changed" from="Metabolism" to="." method="_on_text_metabolism"]
[connection signal="text_changed" from="PressionAtmospherique" to="." method="_on_text_patm"]
[connection signal="text_changed" from="Metabolism3" to="." method="_on_text_fo2"]
